--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.2.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.vip.vjtools</groupId>
             <artifactId>vjkit</artifactId>
             <version>1.0.8</version>
